--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@
 
 html {
 	/* Baseunit ist die Breite einer Karte */
-	--baseunit: calc(300px);
+	--baseunit: 300px;
 	print-color-adjust: exact;
 }
 @media print {
 	html {
 		/* Baseunit ist die Breite einer Karte */
-		--baseunit: calc(28.57vw);
+		--baseunit: 28.57vw;
 	}
 }
 
@@ -74,7 +74,6 @@ body {
 	}
 }
 
-
 .card {
 	width: calc(1 * var(--baseunit));
 	height: calc(1 * var(--baseunit));
@@ -88,20 +87,27 @@ body {
 @media print {
 	.card {
 		/* Gedruckt ohne Rand für die Schneidemaschine */
-		border: 1px solid transparent;
+		border-color: transparent;
 	}
 }
 
-.card--end3 { border-color: transparent; }
-.card--end1, .card--end2, .card--end4, .card--end5 {
-	background-color: black;
-	color: white;
-	border-color: black;
+.card--endseparator { border-width: 0; }
+.card--end {
+	border-width: 0;
+	background: repeating-linear-gradient(
+		90deg,
+		white,
+		white calc(0.035 * var(--baseunit)),
+		#ddd calc(0.035 * var(--baseunit)),
+		#ddd calc(0.065 * var(--baseunit)),
+		white calc(0.065 * var(--baseunit)),
+		white calc(0.1 * var(--baseunit))
+	);
 }
 
 .card--cutting {
 	/* Zum Einstellen der Schneidemaschine */
-	border: 1px solid black;
+	border: calc(0.003 * var(--baseunit)) solid black;
 }
 
 .card__number {
