--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {
 @media print {
 	html {
 		/* Baseunit ist die Breite einer Karte */
-		--baseunit: 28.57vw;
+		--baseunit: 36.19047619vw;
 	}
 }
 
@@ -42,8 +42,8 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	/* Auch auf dem Bildschirm sollen nicht mehr als 4 Karten nebeneinander */
-	max-width: calc(4 * var(--baseunit));
-	font-size: calc(0.07 * var(--baseunit));
+	max-width: calc(3 * var(--baseunit));
+	font-size: calc(0.06 * var(--baseunit));
 	font-family: 'Noto Serif';
 }
 
@@ -66,6 +66,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0 auto;
+	position: relative;
 }
 @media print {
 	.pages__single {
@@ -78,49 +79,119 @@ body {
 	width: calc(1 * var(--baseunit));
 	height: calc(1 * var(--baseunit));
 	box-sizing: border-box;
-	padding: calc(0.05 * var(--baseunit)) calc(0.1 * var(--baseunit)) calc(0.1 * var(--baseunit)) calc(0.1 * var(--baseunit));
+	padding: calc(0.1 * var(--baseunit)) calc(0.15 * var(--baseunit)) 0 calc(0.15 * var(--baseunit));
+	position: relative;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	border: 1px solid #eee;
+  flex-direction: column;
+  justify-content: center;
+	border: 1px solid #ccc;
+	border-radius: 50%;
 }
 @media print {
 	.card {
-		/* Gedruckt ohne Rand für die Schneidemaschine */
+		/* Gedruckt ohne Rand für Toleranz beim Schneiden */
 		border-color: transparent;
+		position: absolute;
 	}
+	.card:before {
+		/* 13cm */
+		width: calc(1.710526 * var(--baseunit));
+		/* 10,1cm */
+		height: calc(1.328947 * var(--baseunit));
+		position: absolute;
+		/* 1,25cm vom oberen Rand */
+		top: calc(-0.16447368 * var(--baseunit));
+		/* 2,7cm vom oberen Rand */
+		left: calc(-0.35526 * var(--baseunit));
+		border: 1px solid black;
+		border-radius: 30%;
+		content: "";
+	}
+	.card:nth-child(1) {
+		/* 1.45cm von oben */
+		top: calc(0.190789 * var(--baseunit));
+		/* 0.5cm Rand von der Seite */
+		left: calc(0.065789 * var(--baseunit));
+	}
+	.card:nth-child(2) {
+		/* 11.05cm = 1,45 Rand + 7,6 Kreis + 2,0 Abstand von oben */
+		top: calc(1.453947 * var(--baseunit));
+		/* 0.5cm Rand von der Seite */
+		left: calc(0.065789 * var(--baseunit));
+	}
+	.card:nth-child(3) {
+		/* 20,65cm = 1,45 Rand + 2x7,6 + 2x2,0 von oben */
+		top: calc(2.717105 * var(--baseunit));
+		/* 0.5cm Rand von der Seite */
+		left: calc(0.065789 * var(--baseunit));
+	}
+	.card:nth-child(4) {
+		/* 1.45cm von oben */
+		top: calc(0.190789 * var(--baseunit));
+		/* 12,9cm Rand von der Seite */
+		left: calc(1.6974 * var(--baseunit));
+	}
+	.card:nth-child(5) {
+		/* 11.05cm = 1,45 Rand + 7,6 Kreis + 2,0 Abstand von oben */
+		top: calc(1.453947 * var(--baseunit));
+		/* 12,9cm Rand von der Seite */
+		left: calc(1.6974 * var(--baseunit));
+	}
+	.card:nth-child(6) {
+		/* 20,65cm = 1,45 Rand + 2x7,6 + 2x2,0 von oben */
+		top: calc(2.717105 * var(--baseunit));
+		/* 12,9cm Rand von der Seite */
+		left: calc(1.6974 * var(--baseunit));
+	}
+
+
 }
 
-.card--endseparator { border-width: 0; }
 .card--end {
 	border-width: 0;
 	background: repeating-linear-gradient(
 		90deg,
-		white,
-		white calc(0.035 * var(--baseunit)),
-		#ddd calc(0.035 * var(--baseunit)),
-		#ddd calc(0.065 * var(--baseunit)),
-		white calc(0.065 * var(--baseunit)),
-		white calc(0.1 * var(--baseunit))
+		transparent,
+		transparent calc(0.1 * var(--baseunit)),
+		rgba(0,0,0,0.14) calc(0.1 * var(--baseunit)),
+		rgba(0,0,0,0.14) calc(0.2 * var(--baseunit)),
+		transparent calc(0.2 * var(--baseunit)),
+		transparent calc(0.33333 * var(--baseunit))
 	);
 }
-
-.card--cutting {
-	/* Zum Einstellen der Schneidemaschine */
-	border: calc(0.003 * var(--baseunit)) solid black;
+@media print {
+	.card--end {
+		background: none;
+	}
+	.card--end:before {
+		/* Genau die gleichen Streifen aber überall unter der Stanze */
+		background: repeating-linear-gradient(
+			90deg,
+			transparent,
+			transparent calc(0.1 * var(--baseunit)),
+			rgba(0,0,0,0.14) calc(0.1 * var(--baseunit)),
+			rgba(0,0,0,0.14) calc(0.2 * var(--baseunit)),
+			transparent calc(0.2 * var(--baseunit)),
+			transparent calc(0.33333 * var(--baseunit))
+		);
+	}
 }
 
 .card__number {
 	font-weight: 500;
 	margin: 0 0 calc(0.02 * var(--baseunit)) 0;
+	text-align: center;
+  position: absolute;
+  top: calc(0.1 * var(--baseunit));
+  left: 0;
+  width: 100%;
 }
 
 .card__text {
-	flex-grow: 1;
-	display: block;
 }
 .card__text p {
 	margin: 0 0 calc(0.02 * var(--baseunit)) 0;
+	text-align: center;
 }
 .card__text ul {
 	margin: 0 0 calc(0.02 * var(--baseunit)) 0;
